--- a/package.json
+++ b/package.json
@@ -1,17 +1,30 @@
 {
   "name": "economia-compartilhada-frontend",
   "version": "0.0.0",
+  "private": false,
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   },
   "dependencies": {
-    "vue": "^3.2.6"
+    "path": "^0.12.7",
+    "vue": "^3.2.6",
+    "vue-router": "^4.0.11"
   },
   "devDependencies": {
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
+    "@types/node": "^16.9.1",
     "@vitejs/plugin-vue": "^1.6.1",
     "@vue/compiler-sfc": "^3.2.6",
+    "commitlint": "^13.1.0",
+    "husky": "^7.0.2",
+    "pinst": "^2.1.6",
     "sass": "^1.39.0",
     "typescript": "^4.3.2",
     "vite": "^2.5.4",
