--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
     "serve": "vite preview",
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
-    "postpublish": "pinst --enable"
+    "postpublish": "pinst --enable",
+    "lint:script": "eslint --ext .ts,vue --ignore-path .gitignore ."
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,vue}": "eslint --fix"
   },
   "dependencies": {
     "path": "^0.12.7",
@@ -20,13 +29,22 @@
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@types/node": "^16.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "@vitejs/plugin-vue": "^1.6.1",
     "@vue/compiler-sfc": "^3.2.6",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "commitlint": "^13.1.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^7.17.0",
     "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
     "pinst": "^2.1.6",
+    "prettier": "^2.4.0",
     "sass": "^1.39.0",
-    "typescript": "^4.3.2",
+    "typescript": "^4.4.3",
     "vite": "^2.5.4",
     "vue-tsc": "^0.2.2"
   }
