--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "*.{ts,vue}": "eslint --fix"
   },
   "dependencies": {
+    "axios": "^0.21.4",
+    "mosha-vue-toastify": "^1.0.21",
     "path": "^0.12.7",
     "vue": "^3.2.6",
-    "vue-router": "^4.0.11"
+    "vue-router": "^4.0.11",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
