--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "path": "^0.12.7",
     "vue": "^3.2.6",
     "vue-router": "^4.0.11",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
