--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mosha-vue-toastify": "^1.0.21",
     "path": "^0.12.7",
     "vue": "^3.2.6",
+    "vue-final-modal": "^3.4.1",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.0.0"
